--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
         <shiro.version>1.3.1</shiro.version>
         <ehcache.version>3.4.0</ehcache.version>
         <jackson.version>2.9.3</jackson.version>
-        <poi.version>3.17</poi.version>
     </properties>
 
     <dependencies>
@@ -249,12 +248,6 @@
             <version>5.1.2</version>
         </dependency>
 
-    <!--    <dependency>
-            <groupId>com.github.miemiedev</groupId>
-            <artifactId>mybatis-paginator</artifactId>
-            <version>1.2.17</version>
-        </dependency>-->
-
         <!-- jackson -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -272,17 +265,19 @@
             <version>${jackson.version}</version>
         </dependency>
 
-        <!-- poi -->
-        <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi</artifactId>
-            <version>${poi.version}</version>
+        <!-- 文件上传 -->
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+   <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.3</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml</artifactId>
-            <version>${poi.version}</version>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.6</version>
         </dependency>
+
 
 
     </dependencies>
