--- a/pom.xml
+++ b/pom.xml
@@ -266,8 +266,7 @@
         </dependency>
 
         <!-- 文件上传 -->
-        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
-   <dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.3</version>
@@ -277,8 +276,25 @@
             <artifactId>commons-io</artifactId>
             <version>2.6</version>
         </dependency>
-
-
+        <!-- 富文本编译器 -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <!--${basedir}表示项目根目录,即包含pom.xml文件的目录;${project.basedir}同${basedir};-->
+        <dependency>
+            <groupId>com.baidu</groupId>
+            <artifactId>ueditor</artifactId>
+            <version>1.4.3.3</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ueditor-1.1.2.jar</systemPath>
+        </dependency>
 
     </dependencies>
 
