--- a/pom.xml
+++ b/pom.xml
@@ -288,13 +288,13 @@
             <version>20160810</version>
         </dependency>
         <!--${basedir}表示项目根目录,即包含pom.xml文件的目录;${project.basedir}同${basedir};-->
-        <dependency>
+    <!--    <dependency>
             <groupId>com.baidu</groupId>
             <artifactId>ueditor</artifactId>
             <version>1.4.3.3</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ueditor-1.1.2.jar</systemPath>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
 
