--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,10 +24,10 @@
         <error-code>405</error-code>
         <location>/common/405</location>
     </error-page>
-   <error-page>
+  <!-- <error-page>
         <error-code>500</error-code>
         <location>/common/500</location>
-    </error-page>
+    </error-page>-->
 
     <!-- 加载spring容器 -->
     <context-param>
@@ -65,6 +65,7 @@
     <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+        <async-supported>true</async-supported>
         <init-param>
             <param-name>targetFilterLifecycle</param-name>
             <param-value>true</param-value>
